test_src/compiler_errors/types/arithmetic/SubtractBoolError4.b
class SubtractBoolError4 {
    void test() {
        Bool value = true;
        println(value -= 2);
    }
}
